--- a/files/httpd-vhosts.conf
+++ b/files/httpd-vhosts.conf
@@ -22,19 +22,19 @@
 #
 <VirtualHost *:80>
     ServerAdmin webmaster@dummy-host.example.com
-    DocumentRoot "/usr/local/apache2/htdocs-dummy"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
+    DocumentRoot "/usr/local/apache2/htdocs"
+    #ServerName dummy-host.example.com
+    #ServerAlias www.dummy-host.example.com
     ErrorLog "logs/dummy-host.example.com-error_log"
     CustomLog "logs/dummy-host.example.com-access_log" common
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host2.example.com
+    ServerAdmin webmaster@pssbxdev01.stanford.edu
     DocumentRoot "/usr/local/apache2/htdocs"
-    ServerName mykb.stanford.edu
-    ErrorLog "logs/mykb-error_log"
-    CustomLog "logs/mykb-access_log" common
+    ServerName pssbxdev01.stanford.edu
+    ErrorLog "logs/pssbxdev01-error_log"
+    CustomLog "logs/pssbxdev01-access_log" common
 
     RewriteEngine on
     RewriteMap shortlinks txt:/data/links.txt
